String Interview Codes and Multithreading concepts